--- a/data/personal/app.html
+++ b/data/personal/app.html
@@ -160,6 +160,7 @@
 																		<option value="Casado">Casado</option>
 																		<option value="Divorciado">Divorciado</option>
 																		<option value="Viudo">Viudo</option>
+																		<option value="Union Libre">Union Libre</option>
 																		</select>
 																	</div>
 																</div>
@@ -237,7 +238,7 @@
 															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Curso realizado:</label>
 															<div class="col-xs-12 col-sm-8">
 																<div class="clearfix">
-																	<textarea class="letras form-control" name="txta_curso1" id="form-field-8" placeholder="Cursos Realizados" onKeyUp="this.value = this.value.toUpperCase();"></textarea>
+																	<textarea class="form-control" name="txta_curso1" id="form-field-8" placeholder="Cursos Realizados" onKeyUp="this.value = this.value.toUpperCase();"></textarea>
 																</div>
 															</div>
 														</div>
@@ -245,7 +246,7 @@
 															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Establecimiento:</label>
 															<div class="col-xs-12 col-sm-8">
 																<div class="clearfix">
-																	<textarea class="letras form-control" name="txta_establecimiento" id="form-field-8" placeholder="Establecimiento" onKeyUp="this.value = this.value.toUpperCase();"></textarea>
+																	<textarea class="form-control" name="txta_establecimiento" id="form-field-8" placeholder="Establecimiento" onKeyUp="this.value = this.value.toUpperCase();"></textarea>
 																</div>
 															</div>
 														</div>
@@ -268,7 +269,7 @@
 															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Curso realizado:</label>
 															<div class="col-xs-12 col-sm-8">
 																<div class="clearfix">
-																	<textarea class="letras form-control" name="txta_curso2" id="form-field-8" placeholder="Cursos Realizados" onKeyUp="this.value = this.value.toUpperCase();"></textarea>
+																	<textarea class="form-control" name="txta_curso2" id="form-field-8" placeholder="Cursos Realizados" onKeyUp="this.value = this.value.toUpperCase();"></textarea>
 																</div>
 															</div>
 														</div>
@@ -276,7 +277,7 @@
 															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Establecimiento:</label>
 															<div class="col-xs-12 col-sm-8">
 																<div class="clearfix">
-																	<textarea class="letras form-control" name="txta_establecimiento2" id="form-field-8" placeholder="Establecimiento" onKeyUp="this.value = this.value.toUpperCase();"></textarea>
+																	<textarea class="form-control" name="txta_establecimiento2" id="form-field-8" placeholder="Establecimiento" onKeyUp="this.value = this.value.toUpperCase();"></textarea>
 																</div>
 															</div>
 														</div>
@@ -379,7 +380,7 @@
 															<label class="control-label col-xs-12 col-sm-2 no-padding-right" >Dirección Domiciliaria:&nbsp;</label>
 															<div class="col-xs-12 col-sm-10">
 																<div class="clearfix">
-																	<input type="text" name="txt_direccion" id="txt_direccion" class="letras col-xs-12 input-sm" onKeyUp="this.value = this.value.toUpperCase();"/>
+																	<input type="text" name="txt_direccion" id="txt_direccion" class="col-xs-12 input-sm" onKeyUp="this.value = this.value.toUpperCase();"/>
 																</div>
 															</div>
 														</div>
@@ -544,7 +545,7 @@
 															<label class="control-label col-xs-12 col-sm-2 no-padding-right" >Dirección:</label>
 															<div class="col-xs-12 col-sm-10">
 																<div class="clearfix">
-																	<input type="text" txt_direccion_trab name="txt_direccion_trab" id="txt_direccion_trab" class="letras col-xs-12 input-sm" onKeyUp="this.value = this.value.toUpperCase();"/>
+																	<input type="text" txt_direccion_trab name="txt_direccion_trab" id="txt_direccion_trab" class="col-xs-12 input-sm" onKeyUp="this.value = this.value.toUpperCase();"/>
 																</div>
 															</div>
 														</div>
