--- a/data/ficha_programas/app.html
+++ b/data/ficha_programas/app.html
@@ -399,11 +399,13 @@
 														</div>
 													</div>
 												</div>
-												<!-- FIN TERCER ROW -->
-												<!-- INICIO CUARTO ROW -->
-												<br>
-												<br>
-												<!-- inicio de cuadros de texto -->
+											</form>
+										</div>
+									<!-- FIN DEL PRIMER FORMULARIO DATOS PERSONALES -->
+									<!-- INICIO DEL SEGUNDO FORMULARIO DIAS DE TRANSMISION -->
+										<div class="step-pane active" data-step="2">
+											<form class="form-horizontal" id="form_etapa2">
+												<!-- INICIO DEL PRIMER ROW -->
 												<div class="row">
 												<h3 class="header smaller blue">&nbsp; Días de Transmisión con Frecuencia:</h3>
 													<div class="col-sm-12">
@@ -544,8 +546,8 @@
 												        </div>
 											        </div>
 												</div>
-												<!-- FIN CUARTO ROW -->
-												<!-- INICIO QUINTO ROW -->
+												<!-- FIN DEL PRIMER ROW -->
+												<!-- INICIO DEL SEGUNDO ROW -->
 												<div class="row">
 												<h3 class="header smaller blue">&nbsp; Frecuencia de Invitados:</h3>
 													<div class="col-sm-12">
@@ -686,14 +688,8 @@
 												        </div>
 											        </div>
 												</div>
-												<!-- FIN DEL QUINTO ROW -->
-											</form>
-										</div>
-									<!-- FIN DEL PRIMER FORMULARIO DATOS PERSONALES -->
-									<!-- INICIO DEL SEGUNDO FORMULARIO DIAS DE TRANSMISION -->
-										<div class="step-pane active" data-step="2">
-											<form class="form-horizontal" id="form_etapa2">
-												<!-- INICIO DEL PRIMER ROW -->
+												<!-- FIN DEL SEGUNDO ROW -->
+												<!-- INICIO DEL TERCER ROW -->
 												<div class="row">
 													<div class="col-sm-6">
 														<h3 class="header smaller blue">&nbsp; Género Musical:</h3>
@@ -708,6 +704,7 @@
 																		<thead>
 																			<tr class="success" style="font-size: 16px;font-weight: bold">
 																				<td>Nro</td>
+																				<td>Codigo</td>
 																				<td>Género</td>
 																				<td>Porcentaje</td>
 																				<td>Proceso</td>
@@ -724,7 +721,7 @@
 													</div>
 													<div class="col-sm-6">
 														<h3 class="header smaller blue">&nbsp; Tipo de Programación:</h3>
-														<!-- inicio de la tabla para los equipos que lo conforman	 -->
+														<!-- inicio de la tabla para la programacion-->
 														<div class="content">
 															<div class="col-xs-12">
 																<!-- <div id="contenedor"> -->
@@ -750,119 +747,216 @@
 														</div>
 													</div>
 												</div>
-												<!-- FIN DEL PRIMER ROW -->
-												<!-- INICIO DEL SEGUNDO ROW -->
+												<!-- FIN DEL TERCER ROW -->
+												<!-- INICIO DEL CUARTO ROW -->
 												<div class="row">
-												<h3 class="header smaller blue">&nbsp; Estructura del Programa:</h3>
-													
+												<h3 class="header smaller blue">&nbsp; ESTRUCTURA DEL PROGRAMA:</h3>
+													<div class="col-sm-6">
+													<h4 class="header smaller pink">&nbsp; Sincronizado de Tiempos Primera Hora:</h4>
+														<!-- inicio de la tabla para sincronizados de tiemo primera hora-->
+														<div class="content">
+															<div class="col-xs-12">
+																<!-- <div id="contenedor"> -->
+																<div id="btn_agregar_hora1" class="btn btn-success">Agregar</div>
+																<br>
+																<br>
+																	<table class="table table-hover" id="tabla_hora1">
+																		<thead>
+																			<tr class="success" style="font-size: 16px;font-weight: bold">
+																				<td>Nro</td>
+																				<td>1 Hora</td>
+																				<td>Actividad</td>
+																				<td>Responsable</td>
+																				<td>Proceso</td>
+																			</tr>
+																		</thead>
+																		<tbody>
+																		<!-- proceso del llenado de la tabla -->
+																		</tbody>
+																	</table>
+																	<!-- <div id="grid-pager"></div> -->
+																<!-- </div> -->
+															</div><!-- /.col -->
+														</div>
+													</div>
+													<div class="col-sm-6">
+													<h4 class="header smaller pink">&nbsp; Sincronizado de Tiempos Segunda Hora:</h4>
+														<!-- inicio de la tabla para sincronizados de tiemo primera hora-->
+														<div class="content">
+															<div class="col-xs-12">
+																<!-- <div id="contenedor"> -->
+																<div id="btn_agregar_hora2" class="btn btn-success">Agregar</div>
+																<br>
+																<br>
+																	<table class="table table-hover" id="tabla_hora2">
+																		<thead>
+																			<tr class="success" style="font-size: 16px;font-weight: bold">
+																				<td>Nro</td>
+																				<td>2 Hora</td>
+																				<td>Actividad</td>
+																				<td>Responsable</td>
+																				<td>Proceso</td>
+																			</tr>
+																		</thead>
+																		<tbody>
+																		<!-- proceso del llenado de la tabla -->
+																		</tbody>
+																	</table>
+																	<!-- <div id="grid-pager"></div> -->
+																<!-- </div> -->
+															</div><!-- /.col -->
+														</div>
+													</div>
 												</div>
-												<!-- FIN DEL SEGUNDO ROW -->
+												<!-- FIN DEL CUARTO ROW -->
+												<!-- INICIO DEL QUINTO ROW -->
+												<div class="row">
+													<div class="col-sm-6">
+													<h4 class="header smaller pink">&nbsp; Sincronizado de Tiempos Tercera Hora:</h4>
+														<!-- inicio de la tabla para sincronizados de tiemo primera hora-->
+														<div class="content">
+															<div class="col-xs-12">
+																<!-- <div id="contenedor"> -->
+																<div id="btn_agregar_hora3" class="btn btn-success">Agregar</div>
+																<br>
+																<br>
+																	<table class="table table-hover" id="tabla_hora3">
+																		<thead>
+																			<tr class="success" style="font-size: 16px;font-weight: bold">
+																				<td>Nro</td>
+																				<td>3 Hora</td>
+																				<td>Actividad</td>
+																				<td>Responsable</td>
+																				<td>Proceso</td>
+																			</tr>
+																		</thead>
+																		<tbody>
+																		<!-- proceso del llenado de la tabla -->
+																		</tbody>
+																	</table>
+																	<!-- <div id="grid-pager"></div> -->
+																<!-- </div> -->
+															</div><!-- /.col -->
+														</div>
+													</div>
+													<div class="col-sm-6">
+													<h4 class="header smaller pink">&nbsp; Sincronizado de Tiempos Cuarta Hora:</h4>
+														<!-- inicio de la tabla para sincronizados de tiemo primera hora-->
+														<div class="content">
+															<div class="col-xs-12">
+																<!-- <div id="contenedor"> -->
+																<div id="btn_agregar_hora4" class="btn btn-success">Agregar</div>
+																<br>
+																<br>
+																	<table class="table table-hover" id="tabla_hora4">
+																		<thead>
+																			<tr class="success" style="font-size: 16px;font-weight: bold">
+																				<td>Nro</td>
+																				<td>4 Hora</td>
+																				<td>Actividad</td>
+																				<td>Responsable</td>
+																				<td>Proceso</td>
+																			</tr>
+																		</thead>
+																		<tbody>
+																		<!-- proceso del llenado de la tabla -->
+																		</tbody>
+																	</table>
+																	<!-- <div id="grid-pager"></div> -->
+																<!-- </div> -->
+															</div><!-- /.col -->
+														</div>
+													</div>
+												</div>
+												<!-- FIN DEL QUINTO ROW -->
 											</form>
 										</div>
 									<!-- FIN DEL SEGUNDO FORMULARIO DIAS DE TRANSMISION -->
 									<!-- INICIO DEL TERCER FORMULARIO ESTRUCTURA DEL PROGRAMA -->
 										<div class="step-pane active" data-step="3">
-											<h3 class="header smaller blue">&nbsp; Datos de un familiar cercano o representante si es menor de edad con firma de autorización:</h3>
+											<h3 class="header smaller blue">&nbsp; Segmentos:</h3>
 											<form class="form-horizontal" id="form_etapa3">
 												<div class="row">
-													<div class="col-sm-4">
-														<div class="form-group">
-															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Nombres:</label>
-															<div class="col-xs-12 col-sm-8">
-																<div class="clearfix">
-																	<input type="text" name="txt_nombres_familia" id="txt_nombres_familia" class="letras col-xs-12 input-sm" onKeyUp="this.value = this.value.toUpperCase();"/>
-																</div>
-															</div>
+													<div class="col-sm-12">
+														<!-- inicio de la tabla para sincronizados de tiemo primera hora-->
+														<div class="content">
+															<div class="col-xs-12">
+																<!-- <div id="contenedor"> -->
+																<div id="btn_agregar_segmentos" class="btn btn-success">Agregar</div>
+																<br>
+																<br>
+																	<table class="table table-hover" id="tabla_segmentos" style="text-align:center;">
+																		<thead>
+																			<tr class="success" style="font-size: 16px;font-weight: bold">
+																				<td>Nro</td>
+																				<td>Segmento</td>
+																				<td>Proceso</td>
+																			</tr>
+																		</thead>
+																		<tbody>
+																		<!-- proceso del llenado de la tabla -->
+																		</tbody>
+																	</table>
+																	<!-- <div id="grid-pager"></div> -->
+																<!-- </div> -->
+															</div><!-- /.col -->
 														</div>
 													</div>
-													<div class="col-sm-4">
-														<div class="form-group">
-															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Parentesco:</label>
-															<div class="col-xs-12 col-sm-8">
-																<div class="clearfix">
-																	<input type="text" name="txt_parentesco" id="txt_parentesco" class="letras col-xs-12 input-sm" onKeyUp="this.value = this.value.toUpperCase();"/>
-																</div>
-															</div>
-														</div>
-													</div>
-													<div class="col-sm-4">
-														<div class="form-group">
-															<label class="control-label col-xs-6">Teléfono Fijo o Celular:</label>
-															<div class="col-xs-12 col-sm-1">
-																<div class="input-group">
-																	<span class="input-group-addon">
-																		<i class="ace-icon fa fa-phone"></i>
-																	</span>
-																	<input type="tel" id="txt_telf_familia" name="txt_telf_familia" class="telefonos" />
-																</div>
-															</div>
-														</div>
-													</div>
-													<div class="col-sm-8">
-														<div class="form-group">
-															<label class="control-label col-xs-12 col-sm-2 no-padding-right" >Dirección:</label>
-															<div class="col-xs-12 col-sm-10">
-																<div class="clearfix">
-																	<input type="text" name="txt_dir_fami" id="txt_dir_fami" class="letras col-xs-12 input-sm" onKeyUp="this.value = this.value.toUpperCase();"/>
-																</div>
-															</div>
-														</div>
-													</div>
-													<div class="col-sm-4">
-														<div class="form-group">
-															<label class="control-label col-xs-12 col-sm-3 no-padding-right" >Ciudad:</label>
-															<div class="col-xs-12 col-sm-8">
-																<div class="clearfix">
-																	<input type="text" name="txt_ciudad_fami" id="txt_ciudad_fami" class="letras col-xs-12 input-sm" onKeyUp="this.value = this.value.toUpperCase();"/>
-																</div>
-															</div>
-														</div>
-													</div>
-													<!-- Inicio Row de declaracion -->
-													<br>
+												</div>
 													<div class="row">
-														<div class="col-sm-12">
-															<h3 class="header smaller">&nbsp; Declaro que todos los datos aquí emitidos son reales por lo tanto autorizó su verificación, aprobación y aceptación.</h3>	
-														</div>
-														<div class="col-sm-12">
-															<div class="form-group">
-																<label class="control-label col-xs-12 col-sm-2 no-padding-right" >Fecha de Inicio de Trabajo:</label>
-																<div class="col-xs-12 col-sm-2">
-																	<div class="input-group input-group-sm">
-																		<input type="text" id="txt_ini_trab" name="txt_ini_trab" class="form-control datepicker" />
-																		<span class="input-group-addon">
-																			<i class="ace-icon fa fa-calendar"></i>
-																		</span>
-																	</div>
-																</div>
-															</div>
-														</div>
-														<div class="col-sm-12">
-															<div class="form-group">
-																<label class="control-label col-xs-12 col-sm-2 no-padding-right" >Area:</label>
-																<div class="col-xs-12 col-sm-3">
-																	<div class="clearfix">
-																		<select id="select_areas" name="select_areas" class="select2" data-placeholder="Area...">
-																		</select>
-																	</div>
-																</div>
-															</div>
-														</div>
-														<div class="col-sm-12">
-															<div class="form-group">
-																<label class="control-label col-xs-12 col-sm-2 no-padding-right" >Función o Cargo a Ocupar:</label>
-																<div class="col-xs-12 col-sm-2">
-																	<div class="clearfix">
-																		<input type="text" name="txt_cargo_desempe" i 	d="txt_cargo_desempe" class="letras col-xs-12 input-sm" onKeyUp="this.value = this.value.toUpperCase();"/>
-																	</div>
-																</div>
-															</div>
-														</div>
-														<div class="col-sm-4">
-															<h4 class="header red" align="center">Cargo netamente inicial y referencial, pudiendo ser removido reemplazado o reubicado de acuerdo a las necesidades de la empresa y sobre todo a sus actitudes y habilidades que demuestre.</h4>	
+													<h3 class="header smaller blue">&nbsp; Cliente y Posibles Clientes:</h3>
+													<div class="col-sm-6">
+														<!-- inicio de la tabla para clientes y posibles clientes-->
+														<div class="content">
+															<div class="col-xs-12">
+																<!-- <div id="contenedor"> -->
+																<div id="btn_agregar_cliente" class="btn btn-success">Agregar</div>
+																<br>
+																<br>
+																	<table class="table table-hover" id="tabla_clientes">
+																		<thead>
+																			<tr class="success" style="font-size: 16px;font-weight: bold">
+																				<td>Nro</td>
+																				<td>Clientes Confirmados</td>
+																				<td>Porcentaje</td>
+																				<td>Proceso</td>
+																			</tr>
+																		</thead>
+																		<tbody>
+																		<!-- proceso del llenado de la tabla -->
+																		</tbody>
+																	</table>
+																	<!-- <div id="grid-pager"></div> -->
+																<!-- </div> -->
+															</div><!-- /.col -->
 														</div>
 													</div>
-													<!-- Fin de Row de declaracion -->
+													<div class="col-sm-6">
+														<!-- inicio de la tabla para clientes y posibles clientes-->
+														<div class="content">
+															<div class="col-xs-12">
+																<!-- <div id="contenedor"> -->
+																<div id="btn_agregar_posibles" class="btn btn-success">Agregar</div>
+																<br>
+																<br>
+																	<table class="table table-hover" id="tabla_posibles">
+																		<thead>
+																			<tr class="success" style="font-size: 16px;font-weight: bold">
+																				<td>Nro</td>
+																				<td>Posibles Clientes Potenciales</td>
+																				<td>Porcentaje</td>
+																				<td>Proceso</td>
+																			</tr>
+																		</thead>
+																		<tbody>
+																		<!-- proceso del llenado de la tabla -->
+																		</tbody>
+																	</table>
+																	<!-- <div id="grid-pager"></div> -->
+																<!-- </div> -->
+															</div><!-- /.col -->
+														</div>
+													</div>
 												</div>
 											</form>
 										</div>
